name:                distr
version:             0.1.0.0
synopsis:            
-- description:
homepage:            
license:             MIT
author:              Silvan Mosberger
maintainer:          contact@infinisil.com
copyright:           2019 Silvan Mosberger
category:            
build-type:          Simple
cabal-version:       >=1.10

executable distr
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5
                     , random
                     , Chart
                     , Chart-cairo
                     , lens
                     , containers
